--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "4_nodejs",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "src/index.js",
     "scripts": {
-        "start": "nodemon --inspect index.js",
+        "start": "nodemon --inspect src/index.js",
+        "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -22,10 +23,12 @@
     },
     "homepage": "https://github.com/namnhi997/nodejs_tutorial#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "express-handlebars": "^5.2.1"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
+        "node-sass": "^5.0.0",
         "nodemon": "^2.0.7"
     }
 }
