--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dependencies": {
         "express": "^4.17.1",
         "express-handlebars": "^5.2.1",
-        "mongoose": "^5.12.2"
+        "mongoose": "^5.12.2",
+        "mongoose-slug-generator": "^1.0.4"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
